[gd_scene load_steps=11 format=3 uid="uid://saktvxup8cjo"]

[ext_resource type="Theme" uid="uid://csapexuuln7nx" path="res://Theme/uimenu.tres" id="1_sb1jo"]
[ext_resource type="Script" uid="uid://dp6l7ry888ujw" path="res://Scripts/Menu.gd" id="3_2v8d6"]
[ext_resource type="FontFile" uid="uid://bodh18uace0u0" path="res://Extern/FONT/suikoden-monospaced.ttf" id="3_alu6o"]
[ext_resource type="Texture2D" uid="uid://bau0dr758he5h" path="res://Sprite/logoEJ.png" id="3_lbxic"]
[ext_resource type="PackedScene" uid="uid://dee4yq0rea45s" path="res://Prefab/transition_setup.tscn" id="5_6hgn1"]
[ext_resource type="Shader" uid="uid://bqmhueq26gysj" path="res://Shader/tr.gdshader" id="6_fyf5i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2k45"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j1rv5"]
bg_color = Color(0.0195939, 0.0588438, 0.0306887, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hgydy"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k52wo"]
resource_local_to_scene = true
shader = ExtResource("6_fyf5i")
shader_parameter/baseColor = Color(0, 0, 0, 1)
shader_parameter/dissolveSlider = 0.0
shader_parameter/holeScale = 15.0
shader_parameter/holeDensity = 1.5
shader_parameter/edgeColor = Color(0.980392, 0.568627, 0.258824, 1)
shader_parameter/edgeThickness = 0.025
shader_parameter/edgeGlowIntensity = 1.466
shader_parameter/enable_dissolve_animation = false
shader_parameter/animation_speed = 0.6

[node name="Menu" type="Control" groups=["menu2d"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sb1jo")
script = ExtResource("3_2v8d6")

[node name="title" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 672.0
offset_bottom = 152.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/bold_font = ExtResource("3_alu6o")
theme_override_font_sizes/bold_font_size = 39
theme_override_styles/normal = SubResource("StyleBoxFlat_u2k45")
bbcode_enabled = true
text = "[center][b][color=#e17a25][shake]G A S L I G H T E R S[/shake][/color][/b][/center]
"
vertical_alignment = 1

[node name="continue_button" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
offset_left = 64.0
offset_top = 208.0
offset_right = 312.0
offset_bottom = 263.0
text = "continue"
alignment = 0

[node name="play_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 64.0
offset_top = 272.0
offset_right = 312.0
offset_bottom = 327.0
text = "new game
"
alignment = 0

[node name="options_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 64.0
offset_top = 336.0
offset_right = 312.0
offset_bottom = 391.0
text = "options"
alignment = 0

[node name="credit" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 64.0
offset_top = 400.0
offset_right = 312.0
offset_bottom = 455.0
text = "credits
"
alignment = 0

[node name="quit_button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 64.0
offset_top = 464.0
offset_right = 312.0
offset_bottom = 519.0
text = "quit
"
alignment = 0

[node name="Image" type="Sprite2D" parent="."]
position = Vector2(1072, 568)
scale = Vector2(0.354988, 0.37229)
texture = ExtResource("3_lbxic")

[node name="credits" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_j1rv5")

[node name="Label2" type="RichTextLabel" parent="credits"]
layout_mode = 0
offset_left = 64.0
offset_top = 32.0
offset_right = 1088.0
offset_bottom = 552.0
theme_override_styles/normal = SubResource("StyleBoxFlat_hgydy")
bbcode_enabled = true
text = "[center]- Experienced Junior - [/center]



Antoine Rosselli

Pierrick Mahe

Guillaume Delboulbes

Liam Mottet 

Tom Lori 

Marius Barthelemy

Romain Garsiot

								With the participation of 
								


									Special thanks to 


Guillaume Cristiani

Max Guillot



3d Models from :

\"Psx canned tomato soup\" (https://skfb.ly/oT9In) by Brainsick Games is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).

\"PSX Style Trees\" (https://skfb.ly/pswGE) by wooolvie is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).

https://rbgr.itch.io/psx-assets-aparment-pack

https://sourpickle35.itch.io/psx-assets-wardrobe-kit-doors-drawers-interactable

https://sourpickle35.itch.io/psx-assets-wardrobe-kit-doors-drawers-interactable

https://sourpickle35.itch.io/psx-assets-modular-survival-house

https://sourpickle35.itch.io/psx-assets-old-oil-painting-kit

https://sourpickle35.itch.io/psx-assets-home-furniture-kit-2

https://sourpickle35.itch.io/psx-assets-balkan-interior-modular-props

\"Low Poly Truck\" (https://skfb.ly/ontII) by Arifido._ is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/).

GermanCar (c) by Luca Anthony Schwarz

\"Cardboard Box Low Poly\" (https://skfb.ly/oN8vw) by Ellis Rogers-Byrne is licensed under Creative Commons Attribution (http://creativecommons.org/licenses/by/4.0/)."
autowrap_mode = 2

[node name="CLOSE" type="Button" parent="credits"]
layout_mode = 0
offset_left = 488.0
offset_top = 576.0
offset_right = 680.0
offset_bottom = 616.0
text = "CLOSE"

[node name="transition" parent="." instance=ExtResource("5_6hgn1")]

[node name="ColorRect" parent="transition" index="0"]
material = SubResource("ShaderMaterial_k52wo")
mouse_filter = 2

[node name="Label" parent="transition" index="2"]
offset_left = 284.0
offset_top = 222.0
offset_right = 900.0
offset_bottom = 407.0
autowrap_mode = 3

[connection signal="pressed" from="continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="credits/CLOSE" to="." method="_on_close_pressed"]

[editable path="transition"]
